<?xml version="1.0"?>

<!--
Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<!-- <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?> -->
<package format="2">
  <name>nvblox_ros</name>
  <version>0.0.0</version>
  <description>NVBlox ROS1 interface</description>

  <maintainer email="holeynikova@nvidia.com">Helen Oleynikova</maintainer>
  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer> 
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>   
  <author>Helen Oleynikova</author>
  <author>Alexander Millane</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nvblox_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nvblox</depend>
  <depend>nvblox_rviz_plugin</depend>

  <!-- <depend>tf2_eigen</depend> -->
  <depend>tf2_ros</depend>
</package>
